# amplifier-bundle-research

./: .gitignore  AGENTS.md  README.md  bundle.dot  bundle.md  requirements.txt
agents/: citation-manager.md  experiment-runner.md  figure-designer.md  honest-critic.md  hypothesis-designer.md  idea-generator.md  literature-scout.md  methodologist.md  ml-paper-reviewer.md  paper-architect.md  preregistration-reviewer.md  research-citation-manager.md  research-coordinator.md  research-paper-architect.md  research-technical-writer.md  statistician.md  technical-writer.md  venue-formatter.md
behaviors/: cache-only-verification.md  conference-styling.md  cross-vendor-judge.md  exploratory-labeling.md  figure-generation.md  honest-pivot.md  latex-authoring.md  paper-authoring.md  paperbanana.md  research-modes.md  research.md  stop-slop.md
bundles/: dev.yaml  paper-only.md  paper-only.yaml
context/: autonomous-loop-awareness.md  conference-styling-awareness.md  experiment-block-hypothesis-awareness.md  experiment-calibration-awareness.md  experiment-integrity-awareness.md  experiment-power-awareness.md  experiment-provenance-awareness.md  experiment-resume-awareness.md  experiment-stage-analyzer-awareness.md  figure-generation-awareness.md  instructions.md  latex-awareness.md  orchestrated-loop-judge-rubric.md
context/conference-formats/: acl.md  acm.md  arxiv.md  icml.md  ieee.md  neurips.md
context/figure-generation/: paperbanana-methodology.md
context/imaging/: matplotlib-scientific.md  tikz-patterns.md
context/prose-quality/: examples.md  phrases.md  structures.md
context/venue-formats/: nsf-grant.md  policy-memo.md  uspto.md
docs/: ARCHITECTURE.md  GAP_ANALYSIS.md  HANDOFF.md  LINEAGE.md  PERSONAS.md  ROADMAP.md  SAMPLES.md  SESSION_HISTORY.md  SPEC.md  USE_CASES.md  UX_MOCKUP.md  V0.8.0-PLAN.md  V0.8.1-SCRIPT-DIFF.md  V0.8.2-RCA.md  session-1-transcript.md
docs/case-studies/: sleep-consolidation-study.md
docs/plans/: 2026-05-29-autonomous-experiment-loop-design.md  2026-05-29-autonomous-experiment-loop-implementation-phase1.md  2026-05-29-autonomous-experiment-loop-implementation-phase2.md  2026-05-29-autonomous-experiment-loop-implementation-phase3.md
examples/whitepaper-dogfood-run/: 01-question.yaml  02-study-plan.yaml  03-execute-evidence-log.yaml  04-critique.yaml  04b-critique-v2-stop-slop.yaml  05-draft.md  05-draft.tex  README.md
modes/: critique.md  draft.md  execute.md  plan.md  publish.md  question.md
modules/tool-experiment-audit/: README.md  pyproject.toml  pyrightconfig.json
modules/tool-experiment-audit/src/amplifier_research_audit/: __init__.py  __main__.py  audit.py  checklist.py  cli.py  mount.py  report.py
modules/tool-experiment-audit/tests/: conftest.py  test_audit.py  test_checklist.py  test_report.py
modules/tool-experiment-block-hypothesis/: README.md  pyproject.toml
modules/tool-experiment-block-hypothesis/src/amplifier_research_block_hypothesis/: __init__.py  ablation.py  cli.py  domain.py  mount.py  rule_firing.py  verdict.py
modules/tool-experiment-block-hypothesis/tests/: test_ablation.py  test_cli_integration.py  test_domain.py  test_rule_firing.py  test_verdict.py
modules/tool-experiment-power/: README.md  pyproject.toml
modules/tool-experiment-power/src/amplifier_research_power/: __init__.py  calibration.py  cli.py  effects.py  mcnemar.py  mount.py  ttest.py
modules/tool-experiment-power/tests/: test_calibration.py  test_cli_integration.py  test_effects.py  test_mcnemar.py  test_ttest.py
modules/tool-experiment-provenance-check/: README.md  pyproject.toml
modules/tool-experiment-provenance-check/src/amplifier_research_provenance_check/: __init__.py  ast_walker.py  cli.py  git_check.py  mount.py  report.py
modules/tool-experiment-provenance-check/tests/: test_ast_walker.py  test_cli_integration.py  test_git_check.py  test_report.py
modules/tool-experiment-resume/: README.md  pyproject.toml
modules/tool-experiment-resume/src/amplifier_research_resume/: __init__.py  cli.py  manifest.py  merge.py  mount.py  plan.py  subset.py
modules/tool-experiment-resume/tests/: conftest.py  test_cli_integration.py  test_merge.py  test_plan.py  test_subset.py
modules/tool-experiment-stage-analyzer/: README.md  pyproject.toml
modules/tool-experiment-stage-analyzer/src/amplifier_research_stage_analyzer/: __init__.py  analyze.py  categorize.py  cli.py  ingest.py  mount.py  report.py
modules/tool-experiment-stage-analyzer/tests/: test_analyze.py  test_categorize.py  test_cli_integration.py  test_ingest.py  test_ingest_robustness.py  test_report.py
modules/tool-paperbanana/: pyproject.toml
project-context/: GLOSSARY.md  HANDOFF.md  PROJECT_CONTEXT.md
recipes/: _smoke-autonomous-experiment-loop.yaml  _smoke-boolean-condition.yaml  autonomous-experiment-iteration.yaml  autonomous-experiment-loop.yaml  autonomous-experiment-promotion-gate.yaml  benchmark-paper.yaml  bundle-overlay-proposer.yaml  cache-only-verify.yaml  empirical-paper.yaml  grant-proposal.yaml  idea-generation.yaml  literature-review.yaml  orchestrated-loop-iteration.yaml  orchestrated-loop.yaml  paperbanana-figure.yaml  patent-brief.yaml  policy-brief.yaml  replication-study.yaml  residual-adjudicator.yaml  white-paper.yaml
references/latex-style-guides/: INDEX.md  NEURIPS_SUMMARY.txt  (+6 more)
scripts/: check-agent-collisions.sh  check-behavior-includes.sh  check-behavior-structure.sh  check-recipe-agent-refs.sh  compile_latex.py  download_templates.py  generate_figure.py  v0.8.0-healthcheck.sh  v0.8.1-healthcheck.sh  v0.8.2-healthcheck.sh  v0.8.3-healthcheck.sh  v0.8.4-healthcheck.sh  validate-all-recipes.sh  validate_format.py
templates/: DOWNLOAD_INSTRUCTIONS.md  Dockerfile.research  README.md  REPRODUCIBILITY.md  environment.yml  evidence-log.yaml  execution-log.yaml  experiment-ledger.yaml  grant-skeleton.md  imrad-skeleton.tex  patent-brief-template.md  patent-prereg.yaml  policy-brief-template.md  policy-prereg.yaml  preregistration.yaml  replication-study-skeleton.md  requirements.in  requirements.txt  white-paper-skeleton.md
(+22 files in other folders)
