[project]
name = "tool-experiment-audit"
version = "0.1.0"
description = "Experiment integrity audit tool for the Amplifier research bundle"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
amplifier-research-audit = "amplifier_research_audit.cli:main"

[project.entry-points."amplifier.modules"]
tool-experiment-audit = "amplifier_research_audit:mount"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pyright>=1.1.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/amplifier_research_audit"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.10"
include = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
