[project]
name = "tool-experiment-power"
version = "0.1.0"
description = "Experiment power-analysis capability for the Amplifier research bundle (McNemar + t-test)"
requires-python = ">=3.10"
dependencies = [
    "scipy>=1.10.0",
    "numpy>=1.24.0",
    "pandas>=1.5.0",
    "statsmodels>=0.14.0",
]

[project.scripts]
amplifier-research-power = "amplifier_research_power.cli:main"

[project.entry-points."amplifier.modules"]
tool-experiment-power = "amplifier_research_power:mount"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pyright>=1.1.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/amplifier_research_power"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.10"
include = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
