[project]
name = "tool-experiment-provenance-check"
version = "0.1.0"
description = "Pre-experiment data provenance checker: audits that all referenced data files are git-tracked (Amplifier research bundle)"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
amplifier-research-provenance-check = "amplifier_research_provenance_check.cli:main"

[project.entry-points."amplifier.modules"]
tool-experiment-provenance-check = "amplifier_research_provenance_check:mount"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pyright>=1.1.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/amplifier_research_provenance_check"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.10"
include = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
